# book_catalog

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.config/: .env.template
src/apps/: injector_module.py
src/apps/books/: admin.py  models.py  serializers.py  urls.py
src/apps/books/interfaces/persistence/: reader.py  repo.py
src/apps/books/migrations/: 0001_initial.py  0002_initial.py  0003_rename_name_genre_title_book_author_book_genre.py  0004_remove_book_average_rating_rating.py  0005_alter_rating_options_remove_rating_value_rating_star_and_more.py  0006_rating_username.py  0007_rename_username_comment_author_and_more.py
src/apps/books/repositories/: book.py  comment.py  rating.py
src/apps/books/views/: views.py
src/apps/user/: admin.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/apps/user/migrations/: 0001_initial.py  0002_alter_user_managers_user_is_confirmed.py
src/core/: celery.py  settings.py  urls.py
